...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="MAIN_VIEW_ID" id="BYZ-38-t0r" customClass="ViewController" customModule="CurrencyConverter" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="UIControl">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JI4-8B-ljb">
                                <rect key="frame" x="16" y="159.66666666666666" width="110" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="amount" label="Amount Field"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="ZYv-KM-VEv"/>
                                </connections>
                            </textField>
                            <pickerView hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="50W-J9-uZ5">
                                <rect key="frame" x="0.0" y="596" width="375" height="216"/>
                                <accessibility key="accessibilityConfiguration" identifier="currencyPicker" label="Currency Picker">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                            </pickerView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EhO-dV-HJS">
                                <rect key="frame" x="265" y="159.66666666666666" width="30" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="target" label="Target"/>
...
                                <connections>
                                    <action selector="showSourceCurrencyPicker" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qua-rT-AIC"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ASZ-jP-hA4">
                                <rect key="frame" x="164.66666666666666" y="215" width="46" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="date" label="Date"/>
                                <state key="normal" title="Button"/>
                                <connections>
                                    <action selector="showDatePicker" destination="BYZ-38-t0r" eventType="touchUpInside" id="Cab-bc-6vN"/>
                                </connections>
                            </button>
                            <datePicker hidden="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="2YX-I4-MuN">
...
                                    <action selector="datePickerValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Xny-kz-A2F"/>
                                </connections>
                            </datePicker>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="249" scrollEnabled="NO" showsVerticalScrollIndicator="NO" editable="NO" text="0.00" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="2BK-HP-HOC" customClass="VerticallyCenteredTextView" custom
                                <rect key="frame" x="208" y="153" width="57" height="42"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="value" label="Converted Value"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="qV9-dJ-KEB"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
...
